# MyoMapPy

./: .gitignore  README.md  meson.build  pyproject.toml
myomappy/: meson.build
myomappy/c_utils/: array_accessing.c  array_accessing.h  mat_math.c  mat_math.h  meson.build
myomappy/rungekutta/: __init__.py  meson.build  runge_kutta_4.py
myomappy/tractography/: __init__.py  _utils.py  meson.build  rungekutta.py  tractography.c
myomappy/tractography/tractography_sources/: Streamline.c  Streamline.h  VecField.c  VecField.h  array_accessing.h  mask.c  mask.h  propagation.c  propagation.h
